🐛 fix FileSystemManagerUTest: Add @SuppressWarnings("resource") to silence AutoCloseable resource warnings where safe